extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	print(delta)


func _on_m_1_pressed():
	get_tree().change_scene_to_file("res://scene/local game.tscn")
 


func _on_m_2_pressed():
	get_tree().change_scene_to_file("res://scene/local game.tscn")
	


func _on_m_3_pressed():
	get_tree().change_scene_to_file("res://scene/local game.tscn")


func _on_m_4_pressed():
	get_tree().change_scene_to_file("res://scene/local game.tscn")
	


func _on_m_5_pressed():
	get_tree().change_scene_to_file("res://scene/local game.tscn")


func _on_m_6_pressed():
	get_tree().change_scene_to_file("res://scene/local game.tscn")
	


func _on_m_7_pressed():
	get_tree().change_scene_to_file("res://scene/local game.tscn")
	


func _on_m_8_pressed():
	get_tree().change_scene_to_file("res://scene/local game.tscn")
